# label_space_generator

./: README.md  blip_bert_distilbert_4_categories.py  environment.yml  evaluate_distilbert_4_categories.py  setup.cfg  setup.py  train_distilbert_4_categories.py
datasets/: current_4_category_dataset.json
label_space_generator/: __init__.py  generate_label_space_from_dir.py  label_generator.py
label_spaces/: mp3d_7y3sRwLe3Va_label_space_generated.yaml  mp3d_label_space_generated_test.yaml
