[metadata]
name = label_space_generator
version = 0.1.0
description = "Generate label space from images using BLIP, BERT, and DistilBERT"
author = "Marina Ten Have"

[options]
packages = find:
install_requires =
    accelerate==1.4.0
    aiohappyeyeballs==2.4.6
    aiohttp==3.11.13
    aiosignal==1.3.2
    annotated-types==0.7.0
    async-timeout==5.0.1
    attrs==25.1.0
    blis==1.2.0
    catalogue==2.0.10
    certifi==2025.1.31
    cffi==1.14.6
    charset-normalizer==3.4.1
    click==8.1.8
    cloudpathlib==0.20.0
    colorama==0.4.6
    confection==0.1.5
    cymem==2.0.11
    datasets==3.3.2
    dill==0.3.8
    en-core-web-sm==3.8.0
    filelock==3.17.0
    frozenlist==1.5.0
    fsspec==2024.12.0
    gmpy2==2.2.1
    h2==4.2.0
    hpack==4.1.0
    huggingface-hub==0.28.1
    hyperframe==6.1.0
    idna==3.10
    jinja2==3.1.5
    joblib==1.4.2
    langcodes==3.5.0
    language-data==1.3.0
    markdown-it-py==3.0.0
    markupsafe==3.0.2
    mdurl==0.1.2
    marisa-trie==1.2.1
    multidict==6.1.0
    multiprocess==0.70.16
    murmurhash==1.0.12
    networkx==3.2.1
    nltk==3.9.1
    numpy==2.0.2
    packaging==24.2
    pandas==2.2.3
    pillow==11.1.0
    preshed==3.0.9
    propcache==0.3.0
    psutil==7.0.0
    pyarrow==19.0.1
    pycparser==2.22
    pydantic==2.10.6
    pydantic-core==2.27.2
    pygments==2.19.1
    pysocks==1.7.1
    python-dateutil==2.9.0.post0
    pytorch==2.5.1
    pytz==2025.1
    pyyaml==6.0.2
    regex==2024.11.6
    requests==2.32.3
    rich==13.9.4
    safetensors==0.5.2
    scikit-learn==1.6.1
    scipy==1.13.1
    shellingham==1.5.4
    six==1.17.0
    smart-open==7.1.0
    spacy==3.8.3
    spacy-legacy==3.0.12
    spacy-loggers==1.0.5
    srsly==2.5.1
    sympy==1.13.1
    thinc==8.3.4
    threadpoolctl==3.5.0
    tokenizers==0.21.0
    torch==2.5.1
    torchaudio==2.5.1
    torchvision==0.20.1
    tqdm==4.67.1
    transformers==4.49.0
    typer==0.15.1
    typing_extensions==4.12.2
    tzdata==2025.1
    urllib3==2.3.0
    wasabi==1.1.3
    weasel==0.4.1
    wrapt==1.17.2
    xxhash==3.5.0
    yarl==1.18.3
    zstandard==0.23.0

